# GPT

./: .docs-sync-trigger  .formatter-trigger  .gitignore  .integration-ci-refresh  .integration-pr59-refresh-2  .pr213-format-trigger  README.md  pyproject.toml
.github/: dependabot.yml
benchmarks/: run_backtest_feature_reuse.py  run_execution_quote_binding_replay.py  run_okx_1h_alignment.py  run_okx_snapshot_hash_reuse.py  run_okx_snapshot_hash_reuse_1h.py  run_paper_execution_attempt_serialization.py  run_parallel_okx_research_batch.py  run_walk_forward_cache.py  run_walk_forward_cache_peak.py  run_walk_forward_cache_rss.py  run_walk_forward_cache_scaling.py  run_walk_forward_selected_path_cache.py  run_walk_forward_selection_score.py  run_walk_forward_selection_score_1h.py  run_walk_forward_target_only_verify.py  run_walk_forward_timestamp_index.py
config/: okx_holdout.json  okx_research.json  okx_research_1h.json  okx_sealed_holdout_sol.json  research.json
diagnostics/: extra-delay-pytest.txt
docs/: DEPENDENCY_AUDIT.md  HOLDOUT_CANDIDATE_ACCOUNTING.md  INTRADAY_1H_RESEARCH_GATE.md  LIVE_EXECUTION_BOUNDARY.md  MAKER_REPLAY_OPERATIONAL_GATE.md  OKX_INTERVALS.md  OKX_RESEARCH_CONFIG.md  OKX_SPOT_INSTRUMENT_GATE.md  PAPER_EXECUTION_ATTEMPT.md  PAPER_LAUNCH_ACCEPTANCE_STATUS.md  REAL_DATA_POLICY.md  REPRODUCTION.md  SIGNAL_INTENT_TIMING.md  VERIFIED_SNAPSHOT_MANIFEST.md  WALK_FORWARD_REPORT_AUDIT.md  WALK_FORWARD_WARMUP.md
examples/: okx_spot_instrument_replay.py  paper_execution_attempt_replay.py  signal_intent_timing.py  verify_execution_quote_store.py
(+878 files in other folders)
