[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-quant-lab"
version = "0.2.0"
description = "A reproducible, no-lookahead quantitative research baseline."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
